# CoPiLinear_Forcast

./: .gitignore  app.py  app_numbered.txt  daily_rolling_forecast.py  model_utils.py  pyproject.toml  requirements.txt
data/: marginal.csv
models/: 2025_marginal.pkl
scripts/: pre_process.py
