[project]
name = "copilinear-forcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "openpyxl>=3.1",
    "pandas>=2.3.2",
    "pandas-stubs~=2.3.2",
    "pwlf==2.2",
    "streamlit>=1.49.1",
]

[tool.uv.workspace]
members = [
    "CoPiLinear_Forcast",
]
